Fix: process checkout and get order history